--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 requests==2.31.0
-gradio==4.42.0
+gradio==6.6.0
 loguru==0.7.2
 markdown2==2.5.0
 openai==1.44.0
+httpx==0.27.2
 schedule==1.2.2
+beautifulsoup4==4.12.3
