Add support for custom site reporting; enhance configuration and notification features
- Updated config.json to include custom site settings and enabled sites.
- Modified Config class in config.py to load custom site configurations.
- Implemented custom site reporting functionality in daemon_process.py and report_generator.py.
- Added notification method for custom site reports in notifier.py.
- Enhanced gradio_server.py to support custom site report generation through the UI.

--- a/config.json
+++ b/config.json
@@ -20,8 +20,16 @@
     "report_types": [
         "github",
         "hacker_news_hours_topic",
-        "hacker_news_daily_report"
+        "hacker_news_daily_report",
+        "custom_site"
     ],
+    "custom_sites": {
+        "enabled_sites": [
+            "openai_blog",
+            "openai_research"
+        ],
+        "crawl_interval_hours": 6
+    },
     "slack": {
         "webhook_url": "your_slack_webhook_url"
     }
